--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/stack": "^6.3.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-date-picker": "^4.4.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
