--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.73.6",
     "react-native-date-picker": "^4.4.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.1",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
